clean abstract endpoint service code